--- a/Labs/Lab03/README.mdwn
+++ b/Labs/Lab03/README.mdwn
@@ -2,25 +2,27 @@
 
 This folder contains my submission for the D3-Lab3. These files include:
 
-* Images of the final product as it is (03_lab_brown-screenshot_01.jpg and 03_lab_brown-screenshot_01.jpg)
+- Images of the final product as it is (03_lab_brown-screenshot_01.jpg and 03_lab_brown-screenshot_01.jpg)
 
-* The lab file (03_lab_brown.html)
+- The svg test image I made (svg-phone.html)
 
-* The dataset (phonepudata.csv), which is a list of the number of times I picked up my phone due during 26-28 August 2020. The dataset includes:
+- The lab file (03_lab_brown.html)
 
-  * TIME - checking the time
-  * NOTIFICATIONS - received a notification
-  * ALARM - responding to a pre-set alarm/alert message
-  * APPLICATIONS - using an application
+- The dataset (phonepudata.csv), which is a list of the number of times I picked up my phone due during 26-28 August 2020. The dataset includes:
+
+  - TIME - checking the time
+  - NOTIFICATIONS - received a notification
+  - ALARM - responding to a pre-set alarm/alert message
+  - APPLICATIONS - using an application
 
 Time was recorded in ranges of:
 
-* <= 1 minute
-* <= 5 minutes
-* <= 15 minutes
-* <= 30 minutes
-* <= 45 minutes
-* <= 1 hour
+- <= 1 minute
+- <= 5 minutes
+- <= 15 minutes
+- <= 30 minutes
+- <= 45 minutes
+- <= 1 hour
 
 I elected to look at the number of notifications, as they have an annoying habit of leading to more phone use.
 
